Criação do seed e ajuste do listar User

--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/server.ts",
-    "seed": "node --loader ts-node/esm prisma/seed.ts"
+    "dev": "tsx watch src/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "devDependencies": {
     "@types/node": "^24.3.2",
     "prisma": "^6.16.1",
-    "tsx": "^4.20.5",
     "ts-node": "^10.9.1",
+    "tsx": "^4.20.5",
     "typescript": "^5.9.2"
   },
   "dependencies": {
