--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "seed": "tsx prisma/seed.ts"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.3.2",
     "prisma": "^6.16.1",
     "ts-node": "^10.9.1",
@@ -24,6 +25,7 @@
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "fastify": "^5.6.0",
+    "jsonwebtoken": "^9.0.2",
     "zod": "^4.1.8"
   }
 }
